2015-03-20  Zan Dobersek  <zdobersek@igalia.com>

        [GTK] Properly guard X11-specific code in BackingStore::createBackend()
        https://bugs.webkit.org/show_bug.cgi?id=142875

        Reviewed by Martin Robinson.

        * UIProcess/cairo/BackingStoreCairo.cpp:
        (WebKit::BackingStore::createBackend): Guard the GTK- and X11-specific
        bit of code with PLATFORM(GTK) and PLATFORM(X11). Testing GDK_WINDOWING_X11
        ensures that the GTK+ dependency has X11 support, but does not ensure
        that WebKitGTK+ has been configured to build for X11 environments (which
        is what PLATFORM(X11) ensures).

2015-03-17  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update OptionsGTK.cmake and NEWS for 2.7.92 release.

        * gtk/NEWS: Add release notes for 2.7.92.

2015-03-17  Zan Dobersek  <zdobersek@igalia.com>

        [CMake] Use a forwarding header for ANGLE's ShaderLang.h to avoid picking up ANGLE's EGL headers
        https://bugs.webkit.org/show_bug.cgi?id=142530

        Reviewed by Darin Adler.

        * CMakeLists.txt: Replace the Source/ThirdParty/ANGLE/include/GLSLANG entry
        in the list of inclusion directories for WebKit2 with Source/ThirdParty/ANGLE,
        possible due to the new forwarding header for ANGLE's ShaderLang.h.

2015-03-17  Gwang Yoon Hwang  <yoon@igalia.com>

        REGRESSION(r180924): Unable to build WebKitGTK+ with threaded compositor

        Unreviewed build fix.

        * WebProcess/WebPage/LayerTreeHost.h:
        Remove duplicated declaration of setNativeSurfaceHandleForCompositing.

2015-03-16  Alexey Proskuryakov  <ap@apple.com>

        ASSERT(m_plugin) on plugins/snapshotting/snapshot-plugin-not-quite-blocked-by-image.html
        https://bugs.webkit.org/show_bug.cgi?id=142637

        Reviewed by Dean Jackson.

        * WebProcess/Plugins/PluginView.cpp: (WebKit::PluginView::pluginSnapshotTimerFired):
        m_plugin can be legitimately null.
